JEDIT 4.2 VERSION HISTORY

{{{ Version 4.2pre3

Thanks to Ken Turner for contributing to this release.

{{{ Syntax Highlighting

- Added LOTOS syntax highlighting (Ken Turner).

- Added SDL/PL syntax highlighting (Ken Turner).

- Added IMPORT element to RULES tag. All rules from the ruleset named
  by the required attribute DELEGATE are copied into this ruleset.

- Improved Velocity syntax highlighiting.

}}}
{{{ User Interface

- Activity Log now autoscrolls when dragging the mouse outside the log
  area bounds.

- Docked window menu buttons should now look better on MacOS X.

- When closing a buffer, the previous buffer is now selected, not the
  first buffer. The code that does this was actually there all along,
  but it never worked and I didn't notice (it would just go to the first
  buffer).

}}}
{{{ Optimizations

- Fixed a performance regression from pre2. Opening large files with
  soft wrap off should now be as fast (or faster) than 4.1.

- Fixed delays when exiting editor if help viewer and/or plugin manager
  windows were open.

- jEdit.getBuffer() now uses a hashtable instead of a linear scan.

- Optimized away some redundant code in the display manager, which
  should result in improved performance.

- Search dialog should open a little bit faster. This fixes the issue
  where if you press C+f and type a search string really quickly,
  characters would be inserted in the text area.

- Undo queue is now stored in a linked list, rather than an array. As
  offensive as it might sound, the array was being shifted along one
  position for each (non-compound) edit! Especially if the undo limit
  was set to a large value this could cause slowdowns.

- The buffer no longer grabs a write lock when calculating a fold level
  or syntax tokens for a line. This should prevent the text area from
  stalling if the buffer is being saved in an I/O thread.

- Fixed a performance regression from pre2. If all line contexts were