@@ -36,7 +36,7 @@ import org.gjt.sp.util.Log;
  * The default input handler. It maps sequences of keystrokes into actions
  * and inserts key typed events into the text area.
  * @author Slava Pestov
- * @version $Id: DefaultInputHandler.java,v 1.23 2003/06/05 00:01:49 spestov Exp $
+ * @version $Id: DefaultInputHandler.java,v 1.24 2003/06/05 02:43:03 spestov Exp $
  */
 public class DefaultInputHandler extends InputHandler
 {
@@ -309,6 +309,7 @@ public class DefaultInputHandler extends InputHandler
 	{
 		char c = evt.getKeyChar();
 
+		System.err.println("Got a key typed: " + c + "," + (int)c);
 		// ignore
 		if(c == '\b')
 			return;
